--- a/public/index.html
+++ b/public/index.html
@@ -7,4 +7,5 @@
   <body>
     garage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garage
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </html>
