--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>Garage Bin</title>
   </head>
   <body>
-    garage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garagegarage garage garage
+    <button class='open-btn'>click me!</button>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script src='./index.js'></script>
 </html>
