Counter functionality working for total and each cleanliness

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       <p class='title'>items</p>
       <div class='item-list'>
       </div>
+      <div class='array-list'></div>
       <form class='post-form'>
         <input class='item-input' placeholder='enter your item name'>
         <input class='whyItStays-input' placeholder='enter why it stays'>
