Sorted functionality now working

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <div class='garage-door'>
       <div class='break'></div>
       <p class='title'>items</p>
+      <button class='sort-btn'>Sort</button>
       <div class='item-list'>
       </div>
       <div class='array-list'></div>
