--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       <div class='item-list'>
       </div>
       <div class='array-list'></div>
+      <div class='indv-info-pop-up'
       <form class='post-form'>
         <input class='item-input' placeholder='enter your item name'>
         <input class='whyItStays-input' placeholder='enter why it stays'>
