--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset='utf-8'>
     <title>Garage Bin</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+    <h1>Welcome to my Garage!</h1>
+    <div class='garage-cover'></div>
     <div class='container'>
-  <h1>Welcome to my Garage!<h1>
-    <div class='garage-door'>
       <div class='break'></div>
       <p class='title'>items</p>
       <button class='sort-btn'>Sort</button>
@@ -27,6 +29,7 @@
       </form>
     </div>
 </div>
+<button class='open-btn'>Garage Door Control</button>
   </body>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js' type='text/javascript'></script>
   <script src='./index.js'></script>
