Basic Styles are complete

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,13 @@
     <div class='garage-cover'></div>
     <div class='container'>
       <div class='break'></div>
-      <p class='title'>items</p>
+      <p class='title'>Items</p>
+      <hr>
       <button class='sort-btn'>Sort</button>
+      <div class='indv-info-pop-up'></div>
       <div class='item-list'>
       </div>
       <div class='array-list'></div>
-      <div class='indv-info-pop-up'
       <form class='post-form'>
         <input class='item-input' placeholder='enter your item name'>
         <input class='whyItStays-input' placeholder='enter why it stays'>
@@ -27,7 +28,7 @@
         </select>
         <button class='submit-btn'>sumbit</button>
       </form>
-    </div>
+
 </div>
 <button class='open-btn'>Garage Door Control</button>
   </body>
